--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "builds": [
     {
-      "src": "app.js",
+      "src": "/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "(.*)",
+      "src": "/(.*)",
       "dest": "app.js"
     }
   ]
