--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "weathersite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
-  "engines":{
-      "node":"16.16.0",
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
