--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "weathersite",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "16.x"
   },
+ 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
